<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.login.LoginActivity">
    <View
        android:id="@+id/vBack"
        android:layout_marginTop="@dimen/margin_15dp"
        android:layout_marginStart="@dimen/margin_15dp"
        app:layout_constraintTop_toTopOf="parent"
        android:background="@drawable/ic_left_arrow"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_width="24dp"
        android:layout_height="24dp"/>
    <TextView
        android:id="@+id/icLogin"
        android:text="Welcome !"
        android:textSize="30sp"
        android:fontFamily="sans-serif-thin"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/llLogin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>
    <LinearLayout
        android:id="@+id/llLogin"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_width="wrap_content"
        android:orientation="vertical"
        android:layout_height="wrap_content">
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/etName"
            app:errorEnabled="true"
            android:layout_width="@dimen/width_editText_login"
            android:layout_height="wrap_content"
            android:hint="@string/your_name_text">
            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:inputType="textEmailAddress"
                android:layout_height="wrap_content"
                />
        </com.google.android.material.textfield.TextInputLayout>
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/etEmail"
            app:errorEnabled="true"
            android:layout_width="@dimen/width_editText_login"
            android:layout_height="wrap_content"
            android:hint="@string/email_string">
            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:inputType="textEmailAddress"
                android:layout_height="wrap_content"
                />
        </com.google.android.material.textfield.TextInputLayout>
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/etPassword"
            app:errorEnabled="true"
            app:endIconMode="password_toggle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/password_string">
            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:inputType="textPassword"
                android:layout_height="wrap_content"
                />
        </com.google.android.material.textfield.TextInputLayout>
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/etConfirmPassword"
            app:errorEnabled="true"
            app:endIconMode="password_toggle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/confirm_password">
            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:inputType="textPassword"
                android:layout_height="wrap_content"
                />
        </com.google.android.material.textfield.TextInputLayout>
        <androidx.constraintlayout.widget.ConstraintLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <Button
                android:id="@+id/btRegister"
                android:foreground="?attr/selectableItemBackgroundBorderless"
                android:layout_marginTop="@dimen/margin_15dp"
                android:background="@drawable/register_edittext_border"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                android:layout_width="0dp"
                android:textAllCaps="false"
                android:text="@string/register_text"
                android:layout_height="40dp"/>

        </androidx.constraintlayout.widget.ConstraintLayout>
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>