<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.login.LoginActivity">
    <ImageView
        android:id="@+id/icLogin"
        android:src="@drawable/ic_music"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/llLogin"
        android:layout_width="@dimen/width_and_height_icon_login"
        android:layout_height="@dimen/width_and_height_icon_login"/>
    <LinearLayout
        android:id="@+id/llLogin"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_width="wrap_content"
        android:orientation="vertical"
        android:layout_height="wrap_content">
        <EditText
            android:inputType="textEmailAddress"
            android:id="@+id/etEmail"
            android:background="@drawable/gradian_blue_to_red"
            android:hint="@string/email_string"
            android:paddingStart="@dimen/padding_15dp"
            android:layout_width="@dimen/width_editText_login"
            android:layout_height="@dimen/height_editText_login"
            android:paddingLeft="@dimen/padding_15dp"
            tools:ignore="RtlSymmetry" />
        <EditText
            android:inputType="textPassword"
            android:id="@+id/etPassword"
            android:layout_marginTop="@dimen/margin_15dp"
            android:background="@drawable/gradian_blue_to_red"
            android:hint="@string/password_string"
            android:paddingStart="@dimen/padding_15dp"
            android:layout_width="@dimen/width_editText_login"
            android:layout_height="@dimen/height_editText_login"
            android:paddingLeft="@dimen/padding_15dp"
            tools:ignore="RtlSymmetry" />
        <androidx.constraintlayout.widget.ConstraintLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <Button
                android:id="@+id/btRegister"
                android:foreground="?attr/selectableItemBackgroundBorderless"
                android:layout_marginTop="@dimen/margin_15dp"
                android:background="@drawable/register_edittext_border"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintBottom_toTopOf="@id/btLogin"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                android:layout_width="0dp"
                android:textAllCaps="false"
                android:text="@string/register_text"
                android:layout_height="40dp"/>
            <Button
                android:id="@+id/btLogin"
                android:foreground="?attr/selectableItemBackgroundBorderless"
                android:background="@drawable/register_edittext_border"
                android:layout_marginTop="@dimen/margin_15dp"
                android:text="@string/login_text"
                android:textAllCaps="false"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/btRegister"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                android:layout_width="0dp"
                android:layout_height="40dp"/>

        </androidx.constraintlayout.widget.ConstraintLayout>
    </LinearLayout>
<!--    <ProgressBar-->
<!--        app:layout_constraintTop_toTopOf="parent"-->
<!--        app:layout_constraintBottom_toBottomOf="parent"-->
<!--        app:layout_constraintStart_toStartOf="parent"-->
<!--        app:layout_constraintEnd_toEndOf="parent"-->
<!--        android:id="@+id/popularProgressBar"-->
<!--        android:layout_width="wrap_content"-->
<!--        android:layout_height="@dimen/height_50dp"-->
<!--        android:background="@drawable/progress_bar" />-->
</androidx.constraintlayout.widget.ConstraintLayout>